[package]
name = "color-palette"
version = "0.1.0"
description = "Color palette built with tauri"
authors = ["youaremagic"]
license = "MIT"
repository = "https://github.com/youaremagic/color-palette"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
rusqlite = { version = "0.29.0", features = ["bundled"] }
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
